objects/footprint__Foot_Print_RecordType__c.object
<CustomObject>
    <label>Footprint RecordType</label>
    <nameField>
        <label>Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint RecordTypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>footprint__Foot_Print_RecordType_Records__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>footprint__Foot_Print_RecordType_Populate_On__c</fullName>
        <formula>IF( footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c &gt; 0 ,  footprint__Foot_Print_RecordType_Records__c /footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>footprint__Foot_Print_RecordType_Object_Analysis__c</fullName>
        <label>Object Analysis</label>
        <referenceTo>footprint__FootPrint__c</referenceTo>
        <relationshipLabel>Footprint Record Types</relationshipLabel>
        <relationshipName>Footprint_RecordTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>footprint__Foot_Print_RecordType_Populate_OnText__c</fullName>
        <formula>TEXT(footprint__Foot_Print_RecordType_Records__c ) +&apos; / &apos;+TEXT( footprint__Foot_Print_RecordType_Object_Analysis__r.footprint__FootPrint_Records__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On</label>
        <type>Text</type>
    </fields>
</CustomObject>